# remote-ssh-mcp

./: .gitignore  README.md  README_zh.md  ssh_mcp_server.py
.claude-plugin/: plugin.json
backend/: README.md  connection_test.py  main.py  models.py  paths.py  ssh_config_service.py
backend/remote/: __init__.py  audit_store.py  mcp_audit.py  mcp_tools.py  models.py  plan_store.py  policy.py  runner.py  service.py  transfer_models.py  transfer_service.py  transfer_store.py  transfer_worker.py  upload_utils.py
backend/ssh/: __init__.py  executor.py  factory.py  models.py  pool.py  sftp.py
docs/: architecture.md  mcp-file-transfer-job-plan.md  mcp-python-architecture.md  plan-audit-instruction-design.md  ssh-config-editor-crud.md  ssh-connection-pool-design.md  tauri-desktop-app-plan.md  ui-design.md
scripts/: prepare_mcp_resources.py
skills/remote-ssh/: SKILL.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  ssh_config.rs
tests/: test_transfer_recovery.py  test_transfer_safety.py
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
web/src/: App.tsx  index.css
web/src/api/: client.ts  config.ts  logs.ts  plans.ts
web/src/components/: EmptyState.tsx  Header.tsx  LanguageSwitcher.tsx  Layout.tsx  PlanCard.tsx  PlanDetailDialog.tsx  Sidebar.tsx  StatusBar.tsx  StatusDot.tsx
web/src/components/ui/: form.tsx  label.tsx
web/src/contexts/: PlanContext.tsx
web/src/i18n/: index.ts
web/src/lib/: types.ts
web/src/pages/: ConfigDetail.tsx  ConfigEditor.tsx  Logs.tsx  Plans.tsx
(+2 files in other folders)
